<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance</name>
  <version>0.0.0</version>
  <description>Obstacle avoidance for a mobile robot using ultrasonic sensors</description>
  <maintainer email="pg2a1@todo.todo">pg2a1</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
